package org.prototype.demo.common.service;

public interface IExternalService {
    Object executeRequest(Object request);
} 